# rusty-weather

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
src/: about.rs  app.rs  home.rs  main.rs
src/routes/: app.rs  mod.rs
