[package]
name = "rusty-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.3", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5.3", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.3", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.22"
